Pull up following revision(s) (requested by dholland in ticket #1324): 	xsrc/xfree/xc/programs/xdm/access.c: revision 1.2 Don't crash if the local hostname doesn't resolve. PR 26998